--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<header class="masthead bg-homepage text-white text-center py-4">
+<header class="masthead bg-homepage py-4 homepage-banner-text">
   <div class="container d-flex align-items-center flex-column pt-2">
     <h2>GT Movies #2763</h2>
     <p>Helluva Entertainment for a Helluva Engineer!</p>
