--- a/moviesstore/templates/base.html
+++ b/moviesstore/templates/base.html
@@ -26,7 +26,7 @@
             <a class="nav-link" href="{% url 'home.about' %}">About</a>
             <a class="nav-link" href="{% url 'movies.index' %}">Movies</a>
             {% if user.is_authenticated %}
-            <a class="nav-link" href="{% url 'cart.index' %}">Cart</a>
+            <a class="nav-link" href="{% url 'cart.index' %}"><img src="{% static 'img/cart.png' %}" alt="Cart" height="25" /></a>
             {% endif %}
             <div class="vr bg-white mx-2 d-none d-lg-block"></div>
             {% if user.is_authenticated %}
